--- a/index.html
+++ b/index.html
@@ -31,40 +31,40 @@
 </a>
 <!-- Navigation par tabulation END-->
 
-    <!-- bloc-0 -->
-    <header class="bloc bgc-white l-bloc " id="bloc-0">
-        <div class="container bloc-sm">
+<!-- bloc-0 -->
+<header class="bloc bgc-white l-bloc " id="bloc-0">
+    <div class="container bloc-sm">
 
-            <nav class="navbar row">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html">
-                        <img src="img/agence-la-panthere-monochrome.svg"
-                             alt="agence web design logo lyon"
-                             height="40"
-                             loading="lazy">
-                    </a>
-                    <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse"
-                            data-target=".navbar-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                </div>
-                <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-                    <ul class="site-navigation nav navbar-nav" aria-label="main-nav">
-                        <li>
-                            <a href="index.html">Accueil</a>
-                        </li>
-                        <li>
-                            <a href="contact-la-panthere.html">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-    </header>
-    <!-- bloc-0 END -->
+        <nav class="navbar row">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/agence-la-panthere-monochrome.svg"
+                         alt="agence web design logo lyon"
+                         height="40"
+                         loading="lazy">
+                </a>
+                <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse"
+                        data-target=".navbar-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+                <ul class="site-navigation nav navbar-nav" aria-label="main-nav">
+                    <li>
+                        <a href="index.html">Accueil</a>
+                    </li>
+                    <li>
+                        <a href="contact-la-panthere.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+</header>
+<!-- bloc-0 END -->
 
 <main class="page-container">
     <!-- Principal conteneur -->
@@ -72,7 +72,7 @@
 
     <!-- bloc-1-presentation -->
     <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
-         id="bloc-1-hero">
+             id="bloc-1-hero">
         <div class="container bloc-lg">
             <div class="row tight-width-whitespace">
                 <div class="col-sm-12 flex">
@@ -82,7 +82,7 @@
                          alt="Agence La Panthère, agence web lyon"
                          loading="lazy">
                     <h1 class="text-center hero-bloc-text tc-white width-3">
-                    Agence Web design Lyon </h1>
+                        Agence Web design Lyon </h1>
                     <h2 class="h2">La Panthère</h2>
                     <div class="text-center">
                         <a href="contact-la-panthere.html" data-toggle="tab"
@@ -156,7 +156,7 @@
 
     <!-- bloc-3-what-i-do -->
     <section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
-         id="bloc-3-what-i-do">
+             id="bloc-3-what-i-do">
         <div class="container bloc-lg">
             <div class="row tight-width-whitespace black-background">
                 <div class="col-sm-12">
@@ -197,10 +197,10 @@
                     <a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
                        data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
                         <img
-                            src="img/1.jpg"
-                            alt="lyon web design logo agence"
-                            class="img-responsive portfolio-thumb"
-                            loading="lazy">
+                                src="img/1.jpg"
+                                alt="lyon web design logo agence"
+                                class="img-responsive portfolio-thumb"
+                                loading="lazy">
                     </a>
                     <h3 class="mg-md text-center">
                         Refonte d'un site web pour un journal local
@@ -213,9 +213,9 @@
                     <a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
                        data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
                         <img
-                            src="img/2.jpg" class="img-responsive portfolio-thumb"
-                            alt="Création d'un site web pour photographes"
-                            loading="lazy">
+                                src="img/2.jpg" class="img-responsive portfolio-thumb"
+                                alt="Création d'un site web pour photographes"
+                                loading="lazy">
                     </a>
                     <h3 class="mg-md text-center">
                         Création d'un site web pour photographes
@@ -230,9 +230,9 @@
                     <a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
                        data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
                         <img
-                            src="img/3.jpg" class="img-responsive portfolio-thumb"
-                            alt="Création d'un site web pour voyageur"
-                            loading="lazy">
+                                src="img/3.jpg" class="img-responsive portfolio-thumb"
+                                alt="Création d'un site web pour voyageur"
+                                loading="lazy">
                     </a>
                     <h3 class="mg-md text-center">
                         Création d'un site internet pour un voyageur
@@ -246,9 +246,9 @@
                     <a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
                        data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
                         <img
-                            src="img/4.jpg" class="img-responsive portfolio-thumb"
-                            alt="Création d'un site web pour agence de mariage"
-                            loading="lazy">
+                                src="img/4.jpg" class="img-responsive portfolio-thumb"
+                                alt="Création d'un site web pour agence de mariage"
+                                loading="lazy">
                     </a>
                     <h3 class="mg-md text-center">
                         Conception d'un site pour une agence de mariage
@@ -284,75 +284,75 @@
 <!-- Principal conteneur END -->
 
 
-
-<!-- ScrollToTop Button -->
-    <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')">
-        <span class="fa fa-chevron-up"></span></a>
-    <!-- ScrollToTop Button END-->
-
-
-    <!-- Footer - bloc-8 -->
-    <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-        <div class="container bloc-sm">
-            <div class="row">
-                <div class="col-sm-12">
-                    <p class="text-center white">
-                        Agence La Panthère - Agence web basée à Lyon.<br>
-                    </p>
-                    <div class="row row-no-gutters social">
-                        <div class="col-sm-3">
-                            <div class="text-center">
-                                <a class="social" href="index.html" title="Page twitter agence Web design La Panthère">
-                                    <span class="fa fa-twitter icon-md"></span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-sm-3">
-                            <div class="text-center">
-                                <a class="social" href="index.html" title="Page facebook agence Web design La Panthère">
-                                    <span class="fa fa-facebook icon-md"></span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-sm-3">
-                            <div class="text-center">
-                                <a class="social" href="index.html" title="Page dribble agence Web design La Panthère">
-                                    <span class="fa fa-dribbble icon-md"></span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-sm-3">
-                            <div class="text-center">
-                                <a class="social" href="index.html" title="Page instagram agence Web design La Panthère">
-                                    <span class="fa fa-instagram icon-md"></span>
-                                </a>
-                            </div>
+<!-- Footer - bloc-8 -->
+<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+    <div class="container bloc-sm">
+        <div class="row">
+            <div class="col-sm-12">
+                <p class="text-center white">
+                    Agence La Panthère - Agence web basée à Lyon.<br>
+                </p>
+                <div class="row row-no-gutters social">
+                    <div class="col-sm-3">
+                        <div class="text-center">
+                            <a class="social" href="index.html" title="Page twitter agence Web design La Panthère">
+                                <span class="fa fa-twitter icon-md"></span>
+                            </a>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-4">
-                            Partenaires
-                            <ul>
-                                <li>
-                                    <a href="voiture.com">Les meilleurs voiture d'occasion 2022</a>
-                                </li>
-                                <li>
-                                    <a href="pizza.com">Trouve une pizzeria près de chez toi</a>
-                                </li>
-                                <li>
-                                    <a href="matoiture.com">Le meilleurs couvreur près de chez toi</a>
-                                </li>
-                                <li>
-                                    <a href="immobilierseo.com">La meilleur agence près de chez toi</a>
-                                </li>
-                            </ul>
+                    <div class="col-sm-3">
+                        <div class="text-center">
+                            <a class="social" href="index.html" title="Page facebook agence Web design La Panthère">
+                                <span class="fa fa-facebook icon-md"></span>
+                            </a>
                         </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="text-center">
+                            <a class="social" href="index.html" title="Page dribble agence Web design La Panthère">
+                                <span class="fa fa-dribbble icon-md"></span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="text-center">
+                            <a class="social" href="index.html" title="Page instagram agence Web design La Panthère">
+                                <span class="fa fa-instagram icon-md"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-4">
+                        Partenaires
+                        <ul>
+                            <li>
+                                <a href="voiture.com">Les meilleurs voiture d'occasion 2022</a>
+                            </li>
+                            <li>
+                                <a href="pizza.com">Trouve une pizzeria près de chez toi</a>
+                            </li>
+                            <li>
+                                <a href="matoiture.com">Le meilleurs couvreur près de chez toi</a>
+                            </li>
+                            <li>
+                                <a href="immobilierseo.com">La meilleur agence près de chez toi</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
-    </footer>
-    <!-- Footer - bloc-8 END -->
+    </div>
+</footer>
+<!-- Footer - bloc-8 END -->
+
+<!-- ScrollToTop Button -->
+<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')">
+    <span class="fa fa-chevron-up"></span>
+</a>
+<!-- ScrollToTop Button END-->
+
 
 </body>
 </html>
